feat: update docs
